# challenge-toolbox

./: .dockerignore  .drone.yml  .editorconfig  .gitignore  .pylintrc  CHANGES.md  CODEOWNERS  Dockerfile  Makefile  README.md  build.py  check-format.py  check-solution.py  check.py  common.py  deploy-docker-image.py  deploy.py  docker-cleanup.sh  entrypoint.sh  rebuild_dependant_repos.py  requirements.txt  start.py  upgrade.py
.circleci/: config.yml
cast/: build.cast  start.cast
docs/: README.md  concepts.md  environment.md  structure.md
etc/yum.repos.d/: docker-ce.repo  google-cloud-sdk.repo
skel/: README.md  apidata.yml  config.yml
skel/metadata/: summary.md  writeup.md
skeleton/: CHANGELOG  LICENSE  config.yml
skeleton/controller/: Dockerfile
skeleton/downloads/: lc.c  ls
skeleton/metadata/: description.md
skeleton/solvable/: Dockerfile
templates/c/: README.md  config.yml
templates/c/solvable/solvable/: CMakeLists.txt  server.py
templates/c/solvable/solvable/app/: app.c
templates/c/solvable/solvable/src/: CMakeLists.txt
templates/c/solvable/solvable/test/: CMakeLists.txt  test.c
templates/c/solvable/solvable/tests/: test.c
templates/cpp/: README.md  config.yml
templates/csharp/: config.yml
templates/dotnetcore/: config.yml
templates/file/: config.yml
templates/flask/: .drone.yml  README.md  config.yml
templates/java/: config.yml
templates/nested-vm/: config.yml  setup.sh
templates/ssh/: .drone.yml  config.yml
templates/telnet/: config.yml
templates/xss/: README.md  (+1 more)
toolbox/: command.py  config.py  utils.py
(+137 files in other folders)
